umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@thioformaldehyde_hfcs.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Cs
order: 2
equivalence_sets:
  - - C(0)
  - - S(1)
  - - F(2)
  - - H(3)
