umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@trans_diazene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2h
order: 4
equivalence_sets:
  - - N(0)
    - N(1)
  - - H(2)
    - H(3)
