umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@wales_water_12.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
error_code: -14
error: "Error determining symmetry operations: Symmetric polyhedron not at center of mass. Vector length: 1.015376e-03 > 1.000000e-03 (zero threshold)"
