umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@wales_water_16.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2
order: 4
equivalence_sets:
  - - O(0)
    - H(1)
    - H(2)
    - O(3)
  - - H(4)
    - H(5)
    - O(6)
    - H(7)
  - - H(8)
    - O(9)
    - H(10)
    - H(11)
  - - O(12)
    - H(13)
    - H(14)
    - O(15)
  - - H(16)
    - H(17)
    - O(18)
    - H(19)
  - - H(20)
    - O(21)
    - H(22)
    - H(23)
  - - O(24)
    - H(25)
    - H(26)
    - O(27)
  - - H(28)
    - H(29)
    - O(30)
    - H(31)
  - - H(32)
    - O(33)
    - H(34)
    - H(35)
  - - O(36)
    - H(37)
    - H(38)
    - O(39)
  - - H(40)
    - H(41)
    - O(42)
    - H(43)
  - - H(44)
    - O(45)
    - H(46)
    - H(47)
