umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@wales_water_18.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C1
order: 1
equivalence_sets:
  - - O(0)
  - - H(1)
  - - O(2)
  - - H(3)
  - - O(4)
  - - H(5)
  - - O(6)
  - - H(7)
  - - O(8)
  - - O(9)
  - - H(10)
  - - H(11)
  - - O(12)
  - - H(13)
  - - O(14)
  - - H(15)
  - - H(16)
  - - O(17)
  - - O(18)
  - - O(19)
  - - H(20)
  - - O(21)
  - - H(22)
  - - O(23)
  - - H(24)
  - - O(25)
  - - H(26)
  - - O(27)
  - - H(28)
  - - O(29)
  - - H(30)
  - - H(31)
  - - H(32)
  - - H(33)
  - - H(34)
  - - H(35)
  - - H(36)
  - - H(37)
  - - H(38)
  - - H(39)
  - - H(40)
  - - H(41)
  - - H(42)
  - - H(43)
  - - O(44)
  - - O(45)
  - - H(46)
  - - H(47)
  - - H(48)
  - - H(49)
  - - H(50)
  - - H(51)
  - - H(52)
  - - H(53)
