umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@water.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2v
order: 4
equivalence_sets:
  - - O(0)
  - - H(1)
    - H(2)
